--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,18 @@
 HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
-
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
-
 CACHE_VIEWS=false
-
 APP_KEY=
-
-DB_CONNECTION=sqlite
+DB_CONNECTION=pg
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=adonis
-
+DB_PORT=5434
+DB_USER=postgres
+DB_PASSWORD=docker1234
+DB_DATABASE=postgres
 HASH_DRIVER=bcrypt
+SMTP_HOST=
+SMTP_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
