--- a/dev-docker-compose.yml
+++ b/dev-docker-compose.yml
@@ -2,15 +2,21 @@ version: '3.1'
 
 services:
 
-   pg:
-      image: postgres
-      restart: "always"
-      ports:
-         - 5434:5432
-      environment:
-         POSTGRES_PASSWORD: docker1234
-      volumes:
-         - pg-data2:/var/lib/postgresql/data
+  pg:
+    image: postgres
+    restart: "always"
+    ports:
+      - 5434:5432
+    environment:
+      POSTGRES_PASSWORD: docker1234
+    volumes:
+      - pg-data2:/var/lib/postgresql/data
+
+  redis:
+    image: redis:alpine
+    restart: "always"
+    ports:
+      - 6379:6379
 
 volumes:
   pg-data2:
