--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "kue": "adonis kue:listen",
     "dev": "nodemon server.js",
     "test": "node ace test"
   },
@@ -27,7 +28,9 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.10",
+    "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
+    "adonis-kue": "^5.0.1",
     "moment": "^2.29.1",
     "pg": "^8.5.1"
   },
