--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
     "adonis-kue": "^5.0.1",
+    "adonis-sentry": "^2.1.2",
     "moment": "^2.29.1",
     "pg": "^8.5.1"
   },
