--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@adonisjs/mail": "^3.0.10",
     "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
+    "adonis-acl": "^1.1.1",
     "adonis-kue": "^5.0.1",
     "adonis-sentry": "^2.1.2",
     "moment": "^2.29.1",
